--- a/FinalProjectLSD/www/projectStyle.css
+++ b/FinalProjectLSD/www/projectStyle.css
@@ -1,5 +1,5 @@
 body {
-  background-image: linear-gradient(#2B2B2B, #525252);
+  background-color: #2B2B2B;
   color: #ffffff;
 }
 
@@ -19,17 +19,7 @@ img {
   height: auto;
 }
 
-
-.about {
-  color: #E1FDFF;
-  border: 50px solid transparent;
-  padding: 80px;
-  border-image: url(filmstockBorder.png) 50 round;
-}
-
 .widget {
-  border-radius: 25px;
-  border: 2px solid #E5DE40;
   background-color: #2B2B2B;
   color: #ffffff;
 }
