padding added to widget class in projectstyle.css

--- a/FinalProjectLSD/www/projectStyle.css
+++ b/FinalProjectLSD/www/projectStyle.css
@@ -40,6 +40,7 @@ img {
   border: 2px solid #E5DE40;
   background-color: #2B2B2B;
   color: #ffffff;
+    padding: 15px 15px 15px 15px;
 }
 
 .panel {
